--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node --presets es2015 file2.js"
+    "start": "babel-node --presets es2015 file2.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.1.0",
+    "babel-preset-env": "^1.6.1",
+    "jest": "^22.1.4"
+  },
+  "babel": {
+    "presets": ["env"]
   }
 }
