--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node --presets es2015 file2.js",
+    "start": "babel-node --presets es2015 app.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
-    "babel-jest": "^22.1.0",
-    "babel-preset-env": "^1.6.1",
-    "jest": "^22.1.4"
+    "babel-core": "~6.26.0",
+    "babel-jest": "~22.1.0",
+    "babel-preset-env": "~1.6.1",
+    "eslint": "~4.16.0",
+    "eslint-config-prettier": "~2.9.0",
+    "eslint-plugin-import": "~2.8.0",
+    "eslint-plugin-jest": "~21.7.0",
+    "eslint-plugin-prettier": "~2.5.0",
+    "jest": "~22.1.4",
+    "prettier": "~1.10.2",
+    "sinon": "~4.2.1"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
