--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node --presets es2015 app.js",
+    "start": "babel-node --presets env app.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "~1.6.1",
     "babel-core": "~6.26.0",
     "babel-jest": "~22.1.0",
-    "babel-preset-env": "~1.6.1",
+    "babel-register": "^6.26.0",
     "eslint": "~4.16.0",
     "eslint-config-prettier": "~2.9.0",
     "eslint-plugin-import": "~2.8.0",
@@ -29,6 +29,8 @@
   "babel": {
     "presets": [
       "env"
-    ]
+    ],
+    "sourceMaps": true,
+    "retainLines": true
   }
 }
